<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.finalproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.finalproject.ui.main.MainShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/main_shop_activity" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.finalproject.ui.main.MainContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/main_contact_activity" />


    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.finalproject.ui.main.MainAboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/main_about_activity" />

</navigation>